crates/keron-lang/tests/corpus/errors/check/interpolation_in_int_annotation.keron
val n: Int = "result: ${1 + 2}"
